<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.JogoFragment"
    android:background="@color/cinza_claro">



    <LinearLayout
        android:id="@+id/linearJogador1"
        style="@style/linearJogador">

        <TextView
            android:id="@+id/jogador1"
            style="@style/textViewJog"
            android:text="@string/jogador_1"/>

        <TextView
            android:id="@+id/placar1"
            style="@style/textViewPlacar"
            android:text="@string/placar_1"
             />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />


    <LinearLayout
        android:id="@+id/linearJogador2"
        style="@style/linearJogador">

        <TextView
            android:id="@+id/jogador2"
            style="@style/textViewJog"
            android:text="@string/jogador_2"/>



        <TextView
            android:id="@+id/placar2"
            style="@style/textViewPlacar"
            android:text="@string/placar_2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <LinearLayout

        style="@style/linearJogador">

        <TextView
            android:id="@+id/deuVelha"
            style="@style/textViewJog"
            android:text="@string/empate"/>



        <TextView
            android:id="@+id/placarVelha"
            style="@style/textViewPlacar"
            android:text="@string/placar_2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt00"/>

            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt01"
                />
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt02"
                />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt10"
                />
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt11"
                />
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt12"
                />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt20"
                />
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt21"
                />
            <Button
                style="@style/estilo_bt"
                android:id="@+id/bt22"
                />

        </TableRow>
    </TableLayout>
</LinearLayout>